--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
         		<li class="skill-percentage">C-PROGRAMMING</li>
         		<li class="skill-percentage">ANDROID</li>
         		<li class="skill-percentage">JAVA</li>
+			<li class="skill-percentage">ANDROID</li>
+			<li class="skill-percentage">ANDROID</li>
         		<li class="skill-percentage">C++</li>
         		<li class="skill-percentage">HTML/HTML5</li>
         		<li class="skill-percentage">CSS</li>
